--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   },
   "scripts": {
